# python-library

./: .gitignore  BRANCH_RULES.md  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre-commit-template
{{cookiecutter.project_name}}/: .gitignore  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: ci-dev.yml  ci-main.yml  docs.yml  release.yml  version-bump.yml
{{cookiecutter.project_name}}/docs/: api.md  index.md
{{cookiecutter.project_name}}/scripts/: bump_version.py  setup_github_rules.py  strip_notebook_outputs.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __init__.py
{{cookiecutter.project_name}}/tests/: __init__.py  test_sample.py
