[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = "{{cookiecutter.python_requires}}"
license = {text = "{{cookiecutter.open_source_license}}"}
authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"},
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    {% if cookiecutter.open_source_license == "MIT" -%}
    "License :: OSI Approved :: MIT License",
    {% elif cookiecutter.open_source_license == "Apache-2.0" -%}
    "License :: OSI Approved :: Apache Software License",
    {% elif cookiecutter.open_source_license == "GPL-3.0" -%}
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    {% endif -%}
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo}}"
Documentation = "https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.github_repo}}/"
Issues = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo}}/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
